+ fix swagger docs
